--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
